# yf-ticker-info-api

./: .gitignore  pyproject.toml  test.py
.github/: deploy.yaml  test_and_lint.yaml
.github/workflows/: deploy.yml  test_and_lint.yml
aws/lambda/: handler.py  package-lock.json  package.json  requirements.txt  serverless.yml
tests/: conftest.py  test_disk_cache.py  test_rest_api.py
ticker_info/: __init__.py  main.py  utils.py
